--- a/templates/index.html
+++ b/templates/index.html
@@ -84,30 +84,49 @@
 
 <!-- Footer -->
     <footer class="footer">
-      <div class="footer-left">
-        <img src="{{ url_for('static', filename='images/logo_white.png') }}" alt="Neurona Logo" class="footer-logo">
-        <p>
-          The past was the age of Industrialization. Present is the age of information. Our belief is that the future is an age of creativity. <br><br>
-          We want to create a market where creativity becomes a tradable product. In an era where every industry is built and every info is a search away, creativity is the new currency. Neurona is the answer.
-        </p>
-      </div>
-      <div class="footer-right">
-        <h5>Useful Links</h5>
-        <ul class="footer-links">
-           <li><a href="{{ url_for('terms_of_service') }}">Terms of Service</a></li>
-           <li><a href="{{ url_for('privacy_policy') }}">Privacy Policy</a></li>
-           <li><a href="{{ url_for('about_us') }}">About Us</a></li>
-          <li><a href="{{ url_for('contact_us') }}">Contact Us</a></li>
-        </ul>
-        <div class="footer-social">
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-twitter"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4">
+            <div class="footer-left">
+              <img src="{{ url_for('static', filename='images/logo_white.png') }}" alt="Neurona Logo" class="footer-logo">
+              <p class="footer-description">
+                The past was the age of Industrialization. Present is the age of information. Our belief is that the future is an age of creativity.
+                <br><br>
+                We want to create a market where creativity becomes a tradable product. In an era where every industry is built and every info is a search away, creativity is the new currency. Neurona is the answer.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <div class="footer-section">
+              <h5 class="footer-title">Useful Links</h5>
+              <ul class="footer-links">
+                <li><a href="{{ url_for('terms_of_service') }}">Terms of Service</a></li>
+                <li><a href="{{ url_for('privacy_policy') }}">Privacy Policy</a></li>
+                <li><a href="{{ url_for('about_us') }}">About Us</a></li>
+                <li><a href="{{ url_for('contact_us') }}">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 mb-4">
+            <div class="footer-section">
+              <h5 class="footer-title">Connect With Us</h5>
+              <div class="footer-social">
+                <a href="#" class="social-link"><i class="bi bi-facebook"></i></a>
+                <a href="#" class="social-link"><i class="bi bi-twitter"></i></a>
+                <a href="#" class="social-link"><i class="bi bi-instagram"></i></a>
+                <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 Neurona. All rights reserved.</p>
+        <div class="footer-bottom">
+          <div class="row">
+            <div class="col-12">
+              <hr class="footer-divider">
+              <p class="footer-copyright">&copy; 2025 Neurona. All rights reserved.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </div>
